Day 4-Styled profile card using external CSS

--- a/Day3/article.html
+++ b/Day3/article.html
@@ -20,6 +20,9 @@
     <hr>
     <p>Currently learning <abbr title="HyperText Markup Language">HTML</abbr></p>
     <hr>
-
+<h1 style="border: 20px solid Violet;">Hello World</h1>
+<h1 style="background-color:rgb(5, 99, 70);">..hiii.</h1>
+<h1 style="background-color:#ff6347;">..hellooo.</h1>
+<h1 style="background-color:hsl(8, 37%, 85%);">..buddyyy.</h1>
 </body>
 </html>
